<?xml version="1.0"?>
<package format="2">
  <name>radar_slam</name>
  <version>0.0.0</version>

  <description>
        111
  </description>

  <maintainer email="xxkklose@buaa.edu.cn">Xingke Xia</maintainer>

  <license>BSD</license>

  <author email="xxkklose@buaa.edu.cn">Xingke Xia</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>nuscenes2bag</build_depend>
  <build_depend>msgs_radar</build_depend>
  <build_depend>message_generation</build_depend>


  <build_export_depend>msgs_radar</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>nuscenes2bag</exec_depend>
  <exec_depend>msgs_radar</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosbag</test_depend>

  <export>
  </export>
</package>